--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -4,40 +4,44 @@
     Image:
         source: os.getcwd() +"/BCG_fond.png"
     FloatLayout:
-        #BoxLayout:
-        #    Label:
-        #        pos_hint: {'center_x': 0.5, 'y': 0.4}
-        #        font_size: 18
-        #        text: " Mute/Unmute"
-        #    CheckBox:
-        #        pos_hint: {'center_x': 0.5, 'y': 0.4}
-        #        on_press: root.manager.get_screen('game').sound_play()
-        #        on_active: root.manager.get_screen('game').self_active()
+        ButtonHelp:
+            source: os.getcwd() + "/help.png"
+            pos_hint: {'center_x': 0.9, 'center_y': 0.05}
+            size_hint: 0.4, 0.4
         ButtonSound:
-            source: os.getcwd() + "/sound_on_off.png"
-            # source: self.source
-            pos_hint: {'center_x': 0.9, 'center_y': 0.85}
-            size_hint: 0.2, 0.2
+            source: os.getcwd() + "/sound_off_on1.png"
+            #source: os.getcwd() + "/b_Sound2.png"
+            pos_hint: {'center_x': 0.09, 'center_y': 0.05}
+            size_hint: 0.4, 0.4
             on_press: root.manager.get_screen('game').sound_play()
             on_press: root.manager.get_screen('game').self_active()
         ButtonColorWord:
             source: os.getcwd() + "/Button-Color-Word.png"
             size_hint: 0.6, 0.25
-            pos_hint: {'center_x': 0.5, 'y': 0.55}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.63}
             on_press: root.manager.current = 'menu'
             on_press: root.manager.get_screen('menu').sound_validation()
+        Label:
+            text: "Color Word"
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.63}
         ButtonMenuRepeat:
             source: os.getcwd() + "/Button-Repeat-Mode.png"
             size_hint: 0.6, 0.25
-            pos_hint: {'center_x': 0.5, 'y': 0.35}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.47}
             on_press: root.manager.current = 'menu-repeat'
             on_press: root.manager.get_screen('menu').sound_validation()
+        Label:
+            text: "Color Repeat"
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.47}
         ButtonExit:
             source: os.getcwd() + ("/Button-Exit.png")
             pos_hint: {'center_x': 0.5, 'y': 0}
             size_hint: 0.6, 0.25
             on_press: root.leave()
-
 
 <MenuScreenRepeat>:
     Image:
@@ -57,7 +61,10 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.75}
-
+        ButtonHelp:
+            source: os.getcwd() + "/help.png"
+            pos_hint: {'center_x': 0.9, 'center_y': 0.05}
+            size_hint: 0.4, 0.4
         ButtonStart:
             source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
             pos_hint: {'center_x': 0.5, 'center_y': 0.58}
@@ -73,7 +80,6 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.58}
-
         ButtonStart:
             source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
             pos_hint: {'center_x': 0.5, 'center_y': 0.41}
@@ -89,7 +95,6 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.41}
-
         ButtonStart:
             source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
             pos_hint: {'center_x': 0.5, 'center_y': 0.24}
@@ -105,7 +110,6 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.24}
-
         ButtonExit:
             source: os.getcwd() + ("/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'center_y': 0.07}
@@ -158,21 +162,38 @@
         #    size_hint: 0.2, 0.2
         #    on_press: root.manager.get_screen('game').self_active()
         #    on_press: root.manager.get_screen('game').sound_play()
+        ButtonHelp:
+            source: os.getcwd() + "/help.png"
+            pos_hint: {'center_x': 0.9, 'center_y': 0.05}
+            size_hint: 0.4, 0.4
 
         ButtonColours:
-            source: os.getcwd() + ("/Button-Colours-Mode.png")
-            pos_hint: {'center_x': 0.5, 'y': 0.6}
+            source: os.getcwd() + ("/Button_purple.png")
+            pos_hint: {'center_x': 0.5, 'center_y': 0.73}
+            #pos_hint: {'center_x': 0.5, 'y': 0.6}
             size_hint: 0.6, 0.25
             on_press: root.sound_validation()
             on_press: root.manager.current = 'game'
             on_press: root.start_color_mode()
         ButtonText:
-            source: os.getcwd() + ("/Button-Text-Mode.png")
-            pos_hint: {'center_x': 0.5, 'y': 0.37}
+            source: os.getcwd() + ("/Button_purple.png")
+            # pos_hint: {'center_x': 0.5, 'y': 0.37}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             size_hint: 0.6, 0.25
             on_press: root.start_text_mode()
             on_press: root.sound_validation()
             on_press: root.manager.current = 'game'
+        Label:
+            text: "Color Mode"
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.73}
+        Label:
+            text: "Text Mode"
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+
         ButtonExit:
             source: os.getcwd() + ("/Button-Return.png")
             pos_hint: {'center_x': 0.5, 'y': 0}
