--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -38,36 +38,43 @@
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.47}
         ButtonExit:
-            source: os.getcwd() + ("/Button-Exit.png")
-            pos_hint: {'center_x': 0.5, 'y': 0}
+            source: os.getcwd() + ("/Button-Return.png")
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.leave()
+        Label:
+            text: "Exit"
+            font_size: 20
+            color: 0,0,0,1
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
 
 <MenuScreenRepeat>:
     Image:
         source: os.getcwd() + "/CR_fond_P2.png"
     FloatLayout:
-        ButtonStart:
-            source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
-            pos_hint: {'center_x': 0.5, 'center_y': 0.75}
-            size_hint: 0.6, 0.25
-            on_press: root.manager.current = 'game-repeat'
-            on_press: root.manager.get_screen('game-repeat').start_started(1)
-            on_press: root.manager.get_screen('game-repeat').ini()
-            on_press: root.manager.get_screen('game-repeat').easy()
-            on_press: root.manager.get_screen('game-repeat').remember()
-        Label:
-            text: root.text_easiest
-            font_size: 20
-            color: 0,0,0,1
-            pos_hint: {'center_x': 0.5, 'center_y': 0.75}
+        #ButtonStart:
+         #   source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
+          #  pos_hint: {'center_x': 0.5, 'center_y': 0.75}
+           # size_hint: 0.6, 0.25
+            #on_press: root.manager.current = 'game-repeat'
+            #on_press: root.manager.get_screen('game-repeat').start_started(1)
+            #on_press: root.manager.get_screen('game-repeat').ini()
+            #on_press: root.manager.get_screen('game-repeat').easy()
+            #on_press: root.manager.get_screen('game-repeat').remember()
+        #Label:
+            #text: root.text_easiest
+            #font_size: 20
+            #color: 0,0,0,1
+            #pos_hint: {'center_x': 0.5, 'center_y': 0.75}
         ButtonHelp:
             source: os.getcwd() + "/help.png"
             pos_hint: {'center_x': 0.9, 'center_y': 0.05}
             size_hint: 0.4, 0.4
         ButtonStart:
             source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
-            pos_hint: {'center_x': 0.5, 'center_y': 0.58}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.63}
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.58}
             size_hint: 0.6, 0.25
             text: "Start"
             on_press: root.manager.current = 'game-repeat'
@@ -79,25 +86,27 @@
             text: root.text_easy
             font_size: 20
             color: 0,0,0,1
-            pos_hint: {'center_x': 0.5, 'center_y': 0.58}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.63}
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.58}
+        # ButtonStart:
+            #source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
+            #pos_hint: {'center_x': 0.5, 'center_y': 0.41}
+            #size_hint: 0.6, 0.25
+            #text: "Start"
+            #on_press: root.manager.current = 'game-repeat'
+            #on_press: root.manager.get_screen('game-repeat').start_started(1)
+            #on_press: root.manager.get_screen('game-repeat').ini()
+            #on_press: root.manager.get_screen('game-repeat').easy()
+            #on_press: root.manager.get_screen('game-repeat').forgot()
+        #Label:
+            #text: root.text_medium
+            #font_size: 20
+            #color: 0,0,0,1
+            #pos_hint: {'center_x': 0.5, 'center_y': 0.41}
         ButtonStart:
             source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
-            pos_hint: {'center_x': 0.5, 'center_y': 0.41}
-            size_hint: 0.6, 0.25
-            text: "Start"
-            on_press: root.manager.current = 'game-repeat'
-            on_press: root.manager.get_screen('game-repeat').start_started(1)
-            on_press: root.manager.get_screen('game-repeat').ini()
-            on_press: root.manager.get_screen('game-repeat').easy()
-            on_press: root.manager.get_screen('game-repeat').forgot()
-        Label:
-            text: root.text_medium
-            font_size: 20
-            color: 0,0,0,1
-            pos_hint: {'center_x': 0.5, 'center_y': 0.41}
-        ButtonStart:
-            source: os.getcwd() + "/Button-Repeat-Mode-Easiest-Empty.png"
-            pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.48}
             size_hint: 0.6, 0.25
             text: "Start"
             on_press: root.manager.current = 'game-repeat'
@@ -109,12 +118,19 @@
             text: root.text_hard
             font_size: 20
             color: 0,0,0,1
-            pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.48}
         ButtonExit:
             source: os.getcwd() + ("/Button-Return.png")
-            pos_hint: {'center_x': 0.5, 'center_y': 0.07}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'start'
+        Label:
+            text: "Return"
+            font_size: 20
+            color: 0,0,0,1
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
 
 <GameScreenRepeat>:
     GridLayout:
@@ -169,16 +185,16 @@
 
         ButtonColours:
             source: os.getcwd() + ("/Button_purple.png")
-            pos_hint: {'center_x': 0.5, 'center_y': 0.73}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.62}
             #pos_hint: {'center_x': 0.5, 'y': 0.6}
             size_hint: 0.6, 0.25
             on_press: root.sound_validation()
-            on_press: root.manager.current = 'game'
             on_press: root.start_color_mode()
+            on_press: root.manager.current = 'game'
         ButtonText:
             source: os.getcwd() + ("/Button_purple.png")
+            pos_hint: {'center_x': 0.5, 'center_y': 0.45}
             # pos_hint: {'center_x': 0.5, 'y': 0.37}
-            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             size_hint: 0.6, 0.25
             on_press: root.start_text_mode()
             on_press: root.sound_validation()
@@ -187,20 +203,28 @@
             text: "Color Mode"
             font_size: 20
             color: 0,0,0,1
-            pos_hint: {'center_x': 0.5, 'center_y': 0.73}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.62}
         Label:
             text: "Text Mode"
             font_size: 20
             color: 0,0,0,1
-            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.45}
 
         ButtonExit:
             source: os.getcwd() + ("/Button-Return.png")
-            pos_hint: {'center_x': 0.5, 'y': 0}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
             size_hint: 0.6, 0.25
             on_press: root.manager.current = 'start'
+        Label:
+            text: "Return"
+            font_size: 20
+            color: 0,0,0,1
+            # pos_hint: {'center_x': 0.5, 'center_y': 0.24}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
 
 <GameScreen>:
+    Image:
+        source: os.getcwd() + "/GameScreen_fond.png"
     BoxLayout:
         spacing: 5
         orientation: 'vertical'
@@ -213,6 +237,7 @@
                     Label:
                         font_size: 18
                         text: "Time Mode"
+                        color: 0,0,0,1
                     Switch:
                         # pos_hint: {'center_x': 0.48, 'y': 0.25}
                         on_active: root.sound_play()
@@ -231,27 +256,30 @@
             size_hint_y: None
             Label:
                 id: welcome_text
-                font_size: 20
+                font_size: 19
                 size_hint_y: None
                 height: 100
-                # text: root.text
                 text: root.text
+                bold: True
+                color: 0,0,0,1
             Label:
                 id: points
                 font_size: 20
                 size_hint_y: None
                 height: 100
                 text: str(root.points_str)
+                color: 0,0,0,1
         FloatLayout:
             # spacing: [10, 10]
             # padding: [10, 10, 10, 10]
             # cols: 2
-            Button:
+            ButtonHelp:
+                source: os.getcwd() + "/btpush1.png"
                 id: bt1
-                size_hint: 0.5, 0.4
-                pos_hint: {'x': 0, 'y': 0}
+                size_hint: 0.4, 0.4
+                pos_hint: {'center_x': 0.2, 'center_y': 0.2}
                 text: root.texts[0]
-                color: root.colors[0]
+                # color: root.colors[0]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -262,13 +290,14 @@
                 on_press: root.start()
                 on_press: root.count_points(0)
                 on_press: app.text_3 = str(root.no_points)
-            Button:
+            ButtonHelp:
+                source: os.getcwd() + "/btpush1.png"
                 id: bt2
-                size_hint: 0.5, 0.4
+                size_hint: 0.4, 0.4
                 # size: root.width/4, root.height/4
-                pos_hint: {'x': 0.5, 'y': 0.6}
+                pos_hint: {'center_x': 0.79, 'center_y': 0.8}
                 text: root.texts[1]
-                color: root.colors[1]
+                # color: root.colors[1]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -279,13 +308,14 @@
                 on_press: root.start()
                 on_press: root.count_points(1)
                 on_press: app.text_3 = str(root.no_points)
-            Button:
+            ButtonHelp:
+                source: os.getcwd() + "/btpush1.png"
                 id: bt3
-                size_hint: 0.5, 0.4
+                size_hint: 0.4, 0.4
                 # size: root.width/8, root.height/8
-                pos_hint: {'x': 0.5, 'y': 0}
+                pos_hint: {'center_x': 0.79, 'center_y': 0.2}
                 text: root.texts[2]
-                color: root.colors[2]
+                # color: root.colors[2]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -296,13 +326,14 @@
                 on_press: root.start()
                 on_press: root.count_points(2)
                 on_press: app.text_3 = str(root.no_points)
-            Button:
+            ButtonHelp:
+                source: os.getcwd() + "/btpush1.png"
                 id: bt4
-                size_hint: 0.5, 0.4
+                size_hint: 0.4, 0.4
                 # size: root.width/4, root.height/4
-                pos_hint: {'x': 0, 'y': 0.6}
+                pos_hint: {'center_x': 0.2, 'center_y': 0.8}
                 text: root.texts[3]
-                color: root.colors[3]
+                # color: root.colors[3]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
@@ -325,6 +356,72 @@
                 font_size: 40
                 # size_hint: 0.3, 0.3
                 pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+                color: 0,0,0,1
+            Buttonmy:
+                text: root.texts[0]
+                color: root.colors[0]
+                # text: root.text_button
+                id: bt1b
+                size_hint: 0.1, 0.1
+                font_size: 40
+                pos_hint: {'center_x': 0.2, 'center_y': 0.22}
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
+                on_press: app.text_5 = str(root.t_final)
+                on_press: app.text_6 = str(root.records) + str(root.t_best)
+                on_press: root.ask()
+                on_press: root.start()
+                on_press: root.count_points(0)
+                on_press: app.text_3 = str(root.no_points)
+            Buttonmy:
+                text: root.texts[1]
+                color: root.colors[1]
+                # text: root.text_button
+                id: bt2b
+                size_hint: 0.1, 0.1
+                font_size: 40
+                pos_hint: {'center_x': 0.79, 'center_y': 0.82}
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
+                on_press: app.text_5 = str(root.t_final)
+                on_press: app.text_6 = str(root.records) + str(root.t_best)
+                on_press: root.ask()
+                on_press: root.start()
+                on_press: root.count_points(1)
+                on_press: app.text_3 = str(root.no_points)
+            Buttonmy:
+                text: root.texts[2]
+                color: root.colors[2]
+                # text: root.text_button
+                id: bt3b
+                size_hint: 0.1, 0.1
+                font_size: 40
+                pos_hint: {'center_x': 0.79, 'center_y': 0.22}
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
+                on_press: app.text_5 = str(root.t_final)
+                on_press: app.text_6 = str(root.records) + str(root.t_best)
+                on_press: root.ask()
+                on_press: root.start()
+                on_press: root.count_points(2)
+                on_press: app.text_3 = str(root.no_points)
+            Buttonmy:
+                text: root.texts[3]
+                color: root.colors[3]
+                # text: root.text_button
+                id: bt4b
+                size_hint: 0.1, 0.1
+                font_size: 40
+                pos_hint: {'center_x': 0.2, 'center_y': 0.82}
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
+                on_press: app.text_5 = str(root.t_final)
+                on_press: app.text_6 = str(root.records) + str(root.t_best)
+                on_press: root.ask()
+                on_press: root.start()
+                on_press: root.count_points(3)
+                on_press: app.text_3 = str(root.no_points)
+
 
 <WinScreen>:
     Image:
@@ -341,28 +438,34 @@
         orientation: 'vertical'
         Label:
             pos_hint: {'center_x': 0.5, 'y': 0.35}
+            color: 1, 1, 1, 1
             font_size: 20
             text: "You win !"
         Label:
             pos_hint: {'center_x': 0.5, 'y': 0.28}
+            color: 1, 1, 1, 1
             font_size: 20
             text: root.text_2
             text: "time: " + app.text_2 + " seconds"
         Label:
             id: label_3
             pos_hint: {'center_x': 0.5, 'y': 0.20}
+            color: 1, 1, 1, 1
             font_size: 20
             text: "Miss: " + app.text_3
         Label:
             pos_hint: {'center_x': 0.5, 'y': 0.10}
+            color: 1, 1, 1, 1
             font_size: 20
             text: "Penality: 3x" + app.text_3 + " = " + app.text_4 + " seconds"
         Label:
             pos_hint: {'center_x': 0.5, 'y': 0.0}
+            color: 1, 1, 1, 1
             font_size: 20
             text: "Time final: " + app.text_5 + " seconds"
         Label:
             pos_hint: {'center_x': 0.5, 'y': -0.2}
+            color: 1, 1, 1, 1
             font_size: 20
             text: app.text_6
         ButtonOk:
