--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -252,32 +252,50 @@
                     #CheckBox:
                      #   on_press: root.sound_play()
                       #  on_active: root.self_active()
-        BoxLayout:
-            size_hint_y: None
+       # BoxLayout:
+        #    size_hint_y: None
+         #   Label:
+          #      id: welcome_text
+           #     font_size: 21
+            #    size_hint_y: None
+             #   height: 100
+              #  text: root.text
+               # bold: True
+                #color: 0,0,0,1
+            #Label:
+             #   id: points
+              #  font_size: 20
+               # size_hint_y: None
+               # height: 100
+               # text: str(root.points_str)
+               # color: 0,0,0,1
+        FloatLayout:
+            # spacing: [10, 10]
+            # padding: [10, 10, 10, 10]
+            # cols: 2
             Label:
+                pos_hint: {'center_x': 0.3, 'center_y': 1}
                 id: welcome_text
-                font_size: 19
+                font_size: 23
                 size_hint_y: None
                 height: 100
                 text: root.text
                 bold: True
                 color: 0,0,0,1
             Label:
+                pos_hint: {'center_x': 0.76, 'center_y': 1}
                 id: points
                 font_size: 20
                 size_hint_y: None
                 height: 100
                 text: str(root.points_str)
                 color: 0,0,0,1
-        FloatLayout:
-            # spacing: [10, 10]
-            # padding: [10, 10, 10, 10]
-            # cols: 2
+
             ButtonHelp:
                 source: os.getcwd() + "/btpush1.png"
                 id: bt1
-                size_hint: 0.4, 0.4
-                pos_hint: {'center_x': 0.2, 'center_y': 0.2}
+                size_hint: 0.5, 0.5
+                pos_hint: {'center_x': 0.25, 'center_y': 0.2}
                 text: root.texts[0]
                 # color: root.colors[0]
                 font_size: 40
@@ -293,9 +311,9 @@
             ButtonHelp:
                 source: os.getcwd() + "/btpush1.png"
                 id: bt2
-                size_hint: 0.4, 0.4
+                size_hint: 0.5, 0.5
                 # size: root.width/4, root.height/4
-                pos_hint: {'center_x': 0.79, 'center_y': 0.8}
+                pos_hint: {'center_x': 0.74, 'center_y': 0.73}
                 text: root.texts[1]
                 # color: root.colors[1]
                 font_size: 40
@@ -311,9 +329,9 @@
             ButtonHelp:
                 source: os.getcwd() + "/btpush1.png"
                 id: bt3
-                size_hint: 0.4, 0.4
+                size_hint: 0.5, 0.5
                 # size: root.width/8, root.height/8
-                pos_hint: {'center_x': 0.79, 'center_y': 0.2}
+                pos_hint: {'center_x': 0.74, 'center_y': 0.2}
                 text: root.texts[2]
                 # color: root.colors[2]
                 font_size: 40
@@ -329,9 +347,9 @@
             ButtonHelp:
                 source: os.getcwd() + "/btpush1.png"
                 id: bt4
-                size_hint: 0.4, 0.4
+                size_hint: 0.5, 0.5
                 # size: root.width/4, root.height/4
-                pos_hint: {'center_x': 0.2, 'center_y': 0.8}
+                pos_hint: {'center_x': 0.25, 'center_y': 0.73}
                 text: root.texts[3]
                 # color: root.colors[3]
                 font_size: 40
@@ -364,7 +382,7 @@
                 id: bt1b
                 size_hint: 0.1, 0.1
                 font_size: 40
-                pos_hint: {'center_x': 0.2, 'center_y': 0.22}
+                pos_hint: {'center_x': 0.25, 'center_y': 0.22}
                 on_press: app.text_2 = str(root.t_final_no_penality)
                 on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
@@ -380,7 +398,7 @@
                 id: bt2b
                 size_hint: 0.1, 0.1
                 font_size: 40
-                pos_hint: {'center_x': 0.79, 'center_y': 0.82}
+                pos_hint: {'center_x': 0.74, 'center_y': 0.75}
                 on_press: app.text_2 = str(root.t_final_no_penality)
                 on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
@@ -396,7 +414,7 @@
                 id: bt3b
                 size_hint: 0.1, 0.1
                 font_size: 40
-                pos_hint: {'center_x': 0.79, 'center_y': 0.22}
+                pos_hint: {'center_x': 0.74, 'center_y': 0.22}
                 on_press: app.text_2 = str(root.t_final_no_penality)
                 on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
@@ -412,7 +430,7 @@
                 id: bt4b
                 size_hint: 0.1, 0.1
                 font_size: 40
-                pos_hint: {'center_x': 0.2, 'center_y': 0.82}
+                pos_hint: {'center_x': 0.25, 'center_y': 0.75}
                 on_press: app.text_2 = str(root.t_final_no_penality)
                 on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
