--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -68,10 +68,13 @@
             #color: 0,0,0,1
             #pos_hint: {'center_x': 0.5, 'center_y': 0.75}
         ButtonHelp:
-            source: os.getcwd() + "/help.png"
+            source: os.getcwd() + "/scores.png"
             pos_hint: {'center_x': 0.09, 'center_y': 0.05}
             size_hint: 0.4, 0.4
             on_press: root.manager.current = 'scores-color-repeat'
+            on_press: root.manager.get_screen('scores-color-repeat').update()
+            on_press: root.manager.get_screen('game-repeat').update_records() 
+            on_press: root.manager.get_screen('game-repeat').open_init()
         ButtonHelp:
             source: os.getcwd() + "/help.png"
             pos_hint: {'center_x': 0.9, 'center_y': 0.05}
@@ -166,7 +169,7 @@
             size_hint: 0.5, 0.5
             color: root.colours['yellow']
             on_press: root.bt1_pressed()
-            on_press: app.score_repeat = str(root.level)
+            on_press: app.score_repeat = str(root.level-1)
         ButtonHelp:
             # source: os.getcwd() + "/btpush2.png"
             source: os.getcwd() + "/btpush4-moreshadow.png"
@@ -217,10 +220,13 @@
         #    on_press: root.manager.get_screen('game').self_active()
         #    on_press: root.manager.get_screen('game').sound_play()
         ButtonHelp:
-            source: os.getcwd() + "/help.png"
+            source: os.getcwd() + "/scores.png"
             pos_hint: {'center_x': 0.09, 'center_y': 0.05}
             size_hint: 0.4, 0.4
             on_press: root.manager.current = 'scores-color-word'
+            on_press: root.manager.get_screen('scores-color-word').update()
+            on_press: root.manager.get_screen('game').update_records() 
+            on_press: root.manager.get_screen('game').open_init()
         ButtonHelp:
             source: os.getcwd() + "/help.png"
             pos_hint: {'center_x': 0.9, 'center_y': 0.05}
@@ -551,6 +557,11 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.5, 'center_y': 0.12}
+        Label:
+            text: root.text
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.7}
 <InstructionsColorRepeat>
     Image:
         source: os.getcwd() + "/"
@@ -569,7 +580,7 @@
             text: root.text
             font_size: 20
             color: 0,0,0,1
-            pos_hint: {'center_x': 0.4, 'center_y': 0.7}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.7}
 <LooseColorRepeat>
     Image:
         source: os.getcwd() + "/"
@@ -591,4 +602,79 @@
             font_size: 20
             color: 0,0,0,1
             pos_hint: {'center_x': 0.4, 'center_y': 0.7}
-   
+<ScoresColorWord>
+    Image:
+        source: os.getcwd() + "/ColorWord_fond.png"
+    FloatLayout:
+        ButtonExit:
+            source: os.getcwd() + ("/Button-Return.png")
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
+            size_hint: 0.6, 0.25
+            on_press: root.manager.current = 'menu'
+        Label:
+            text: "Return"
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
+        Label:
+            id: best_scores_color_word_color_label
+            text: app.best_scores_color_word_color
+            font_size: 35
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.78, 'center_y': 0.8}
+        Label:
+            text: "High Level in Color mode: "
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.4, 'center_y': 0.8}
+
+        Label:
+            id: best_scores_color_word_text_label
+            text: app.best_scores_color_word_text
+            font_size: 35
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.78, 'center_y': 0.5}
+        Label:
+            text: "High Level in Text mode: "
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.4, 'center_y': 0.5}
+
+<ScoresColorRepeat>
+    Image:
+        source: os.getcwd() + "/Scores_Color_Repeat_fond.png"
+    FloatLayout:
+        ButtonExit:
+            source: os.getcwd() + ("/Button-Return.png")
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
+            size_hint: 0.6, 0.25
+            on_press: root.manager.current = 'menu-repeat'
+        Label:
+            text: "Return"
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.5, 'center_y': 0.12}
+        Label:
+            id: best_scores_color_repeat_medium_label
+            text: app.best_scores_color_repeat_medium
+            font_size: 35
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.77, 'center_y': 0.8}
+        Label:
+            text: "High Level in Medium mode: "
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.4, 'center_y': 0.8}
+
+        Label:
+            id: best_scores_color_repeat_hard_label
+            text: app.best_scores_color_repeat_hard
+            font_size: 35
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.77, 'center_y': 0.5}
+        Label:
+            text: "High Level in Hard mode: "
+            font_size: 20
+            color: 0,0,0,1
+            pos_hint: {'center_x': 0.4, 'center_y': 0.5}
+
